--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,33 @@
     <link rel="stylesheet" href="style.css">
     <title>SQL To Do</title>
 </head>
+
 <body>
-    <main>
+    <header>
         <h1>SQL To Do List</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Add Task</h2>
+            <input type="text" id="taskIn" value="" placeholder="Task">
+            <button type="button" id="addButton">Add Task</button>
+        </section>
+        <section>
+            <h2>Tasks to complete</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Task Number</th>
+                        <th>Task</th>
+                        <th>Complete/Edit/Remove</th>
+                    </tr>
+                </thead>
+                <tbody id="allTasks">
+                </tbody>
+            </table>
+        </section>
     </main>
-    
+
 </body>
+
 </html>
