POST now working, can add to the Database and see the result on the DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,7 +28,7 @@
                     <tr>
                         <th>Task Number</th>
                         <th>Task</th>
-                        <th>Complete/Edit/Remove</th>
+                        <th>Complete/Edit/Delete</th>
                     </tr>
                 </thead>
                 <tbody id="allTasks">
