--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,7 +26,21 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Task Number</th>
+
+                        <th>Task</th>
+                        <th>Complete/Edit/Delete</th>
+                    </tr>
+                </thead>
+                <tbody id="allTasks">
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>Completed tasks</h2>
+            <table>
+                <thead>
+                    <tr>
+
                         <th>Task</th>
                         <th>Complete/Edit/Delete</th>
                     </tr>
