--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>SQL To Do List</h1>
     </header>
-    <main>
+    <main id='mainbody'>
         <section>
             <h2>Add Task</h2>
             <input type="text" id="taskIn" value="" placeholder="Task">
@@ -45,7 +45,7 @@
                         <th>Complete/Edit/Delete</th>
                     </tr>
                 </thead>
-                <tbody id="allTasks">
+                <tbody id="completeTasks">
                 </tbody>
             </table>
         </section>
