Changed the styling and format to be prettier than a table

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,32 +23,16 @@
         </section>
         <section>
             <h2>Tasks to complete</h2>
-            <table>
-                <thead>
-                    <tr>
+            <section id="incompleteTasks">
+            </section>
 
-                        <th>Task</th>
-                        <th>Complete/Edit/Delete</th>
-                    </tr>
-                </thead>
-                <tbody id="allTasks">
-                </tbody>
-            </table>
-        </section>
-        <section>
+
+
             <h2>Completed tasks</h2>
-            <table>
-                <thead>
-                    <tr>
+            <section id="completeTasks">
+            </section>
 
-                        <th>Task</th>
-                        <th>Complete/Edit/Delete</th>
-                    </tr>
-                </thead>
-                <tbody id="completeTasks">
-                </tbody>
-            </table>
-        </section>
+
     </main>
 
 </body>
