--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,6 +8,8 @@
     <script src="jquery-3.6.0.min.js"></script>
     <script src="client.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <title>SQL To Do</title>
 </head>
 
@@ -18,8 +20,16 @@
     <main id='mainbody'>
         <section>
             <h2>Add Task</h2>
-            <input type="text" id="taskIn" value="" placeholder="Task">
-            <button type="button" id="addButton">Add Task</button>
+
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" id="taskIn" placeholder="Task" aria-label="Recipient's username"
+                    aria-describedby="addButton">
+                <button class="btn btn-light-outline" type="button" id="addButton">Add Task</button>
+            </div>
+
+
+            <!-- <input type="text" class="input-group mb-3"  value="" placeholder="">
+            <button type="button"  class="btn btn-secondary">Add Task</button> -->
         </section>
         <section>
             <h2>Tasks to complete</h2>
