internet died, going to call it for tonight on styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,10 +19,8 @@
     </header>
     <main id='mainbody'>
         <section>
-            <h2>Add Task</h2>
-
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" id="taskIn" placeholder="Task" aria-label="Recipient's username"
+            <div class="input-group input-group-lg mb-3">
+                <input type="text" class="form-control" id="taskIn" placeholder="Add Task" aria-label="Recipient's username"
                     aria-describedby="addButton">
                 <button class="btn btn-light-outline" type="button" id="addButton">Add Task</button>
             </div>
@@ -32,13 +30,13 @@
             <button type="button"  class="btn btn-secondary">Add Task</button> -->
         </section>
         <section>
-            <h2>Tasks to complete</h2>
+
             <section id="incompleteTasks">
             </section>
 
 
 
-            <h2>Completed tasks</h2>
+
             <section id="completeTasks">
             </section>
 
