Finally got icons working, css is starting to look more and more as I would like

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,11 +18,11 @@
         <h1>SQL To Do List</h1>
     </header>
     <main id='mainbody'>
-        <section>
+        <section class="inputBar">
             <div class="input-group input-group-lg mb-3">
                 <input type="text" class="form-control" id="taskIn" placeholder="Add Task" aria-label="Recipient's username"
                     aria-describedby="addButton">
-                <button class="btn btn-light-outline" type="button" id="addButton">Add Task</button>
+                <button class="btn btn-light-outline" type="button" id="addButton">+</button>
             </div>
 
 
@@ -42,6 +42,9 @@
 
 
     </main>
+    <footer>
+        <p>&copy; TheKerfuffle 2021</p>
+    </footer>
 
 </body>
 
