Finally punted on centering buttons on each task.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,8 +20,8 @@
     <main id='mainbody'>
         <section class="inputBar">
             <div class="input-group input-group-lg mb-3">
-                <input type="text" class="form-control" id="taskIn" placeholder="Add Task" aria-label="Recipient's username"
-                    aria-describedby="addButton">
+                <input type="text" class="form-control" id="taskIn" placeholder="Add Task"
+                    aria-label="Recipient's username" aria-describedby="addButton">
                 <button class="btn btn-light-outline" type="button" id="addButton">+</button>
             </div>
 
@@ -29,17 +29,12 @@
             <!-- <input type="text" class="input-group mb-3"  value="" placeholder="">
             <button type="button"  class="btn btn-secondary">Add Task</button> -->
         </section>
-        <section>
 
-            <section id="incompleteTasks">
-            </section>
+        <section id="incompleteTasks">
+        </section>
 
-
-
-
-            <section id="completeTasks">
-            </section>
-
+        <section id="completeTasks">
+        </section>
 
     </main>
     <footer>
